replica day3: feature section added and styled complete, progress bar studied but not yet on page, the navbar collapse had issues ie wrong placement of #id and data-target had no hash

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,6 @@ body{
 .header {
   height:6.27rem;
   background-color: #33ccc5;
-  line-height: 60px;
 
 }
 .navbar-brand {
@@ -41,10 +40,12 @@ body{
 /************** =section =home related **************/
 /*****************************************/
 #home {
+  display: block;
   padding-top: 7.25rem;
   height: 100vh;
   background: url(../img/banner-dec-right.png) no-repeat center 3%/cover,
                     url(/img/banner-dec-left.png) no-repeat;
+  margin-bottom: 7.52rem;
 }
 #info-stat {
   margin-left: -1.0rem;
@@ -71,8 +72,11 @@ h6 {
   padding-top:1.25rem;
   padding-left: 1.24rem;
   padding-right: 0px;
-  color: #FC7D59;
-  line-height:5rem;
+  background: linear-gradient(to right, #FA9D4D 0%, #FF4F6B 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  line-height:4.5rem;
 }
 
 .main-btn-green {
@@ -87,3 +91,81 @@ h6 {
   background-color: #4771CB;
   box-shadow: 0 2px 2px 0px #33ccc5;
 }
+
+
+/************** =section features **************/
+/*****************************************/
+#features {
+  margin-top: 36rem;
+  padding: 5rem;
+  display: block;
+}
+.feat-content {
+  border-radius: 50px; 
+  box-shadow: 0 0 10px 0px gray;
+  width: 100%;
+  position: relative;
+  /*  */
+}
+
+.feat-1, .feat-2, .feat-3, .feat-4 {
+  position: relative;
+  padding: 5rem 1rem;
+}
+
+.feat-img {
+  background-repeat: no-repeat;
+  background-position: center;
+  font-size: 2rem;
+  color: white;
+  font-weight: 700;
+  padding: 2rem 3rem;
+  position: absolute;
+  top:-60px;
+  right:25%;
+  /* margin: .4rem; */
+}
+.feat-1 .feat-img {background-image: url(../img/features-number-01.png);}
+.feat-2 .feat-img {background-image: url(../img/features-number-02.png);}
+.feat-3 .feat-img {background-image: url(../img/features-number-03.png);}
+.feat-4 .feat-img {background-image: url(../img/features-number-04.png);}
+
+
+.feat-icon {
+  width: 100%;
+  height: 63px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  margin-bottom: 4rem;
+}
+
+.feat-1 .feat-icon, .feat-3 .feat-icon {background-image: url(../img/features-icon-black-01.png);}
+.feat-2 .feat-icon, .feat-4 .feat-icon {background-image: url(../img/features-icon-black-02.png);}
+
+
+.feat-1:hover, .feat-2:hover, .feat-3:hover, .feat-4:hover {
+  /* background-image: ; */
+  
+  background-repeat:  no-repeat;
+  background-position: 50% 20%;
+  color: white;
+  border-radius: 50px;
+  padding: 5rem 1rem;
+}
+.feat-1:hover,  .feat-3:hover, .feat-1:hover .feat-icon, .feat-3:hover .feat-icon {
+  background-image:url(../img/features-icon-white-01.png), linear-gradient(to right, #31C9C5 5%, #0A90C3 100%);
+  
+}
+.feat-2:hover, .feat-4:hover, .feat-2:hover .feat-icon, .feat-4:hover .feat-icon {
+  background-image:url(../img/features-icon-white-02.png), linear-gradient(to right, #31C9C5 5%, #0A90C3 100%);
+}
+
+.fixed-len-line {
+  background-color: #C1F0EE;
+  height: 2px;
+  width:100px;
+  margin: 35px auto;
+}
+
+/************** =progress bar **************/
+/*****************************************/
